demo-2/gateway/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: meetup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: liprotectregistry.azurecr.io/awsmeetup/gateway:202001231237
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
