demo-2/gateway/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: meetup
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
  - port: 5000
    targetPort: 5000
